# usi-scrapers

./: .gitignore  CANONICAL.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  Public  README.md  ROADMAP.md  TODO.md  add_from_search_results.py  backfill_to_html.py  canonical-scrapers.md  canonical-tracker.md  canonical.md  dev_page.html  dump_inv.py  extract_json.py  inv_test.json  mapping_coverage_report.md  parse_test.py  patch.py  patch_changelog.py  patch_claude.py  portal_data_mapping.json  project-structure.md  pyproject.toml  resolve_skipped_oto.py  scratch.py  search_missing_oto.py  temp.html  test_fetch.py  test_mapping.py  test_to_dev.py  test_to_inv.py  test_transformer.py  try_to_dev.py  verify_amenities.py
.antigravitycli/: 8342904a-9337-437c-bb54-60d0fd83aaf0.json  d7b8fa50-13cb-4d16-b602-cd84b811ea97.json
.claude/: settings.json
archive/: dry_run_portal_ids.py  re_download_images.py  verify_images.py
scripts/: clean_legacy_raw_files.py  test_mapping_dry_run.py
tests/: __init__.py  conftest.py  test_adapters.py  test_api.py  test_classification_signals.py  test_developer_logo.py  test_developer_lookup.py  test_fetcher.py  test_health_check.py  test_id_only_naming.py  test_image_consistency.py  test_images.py  test_import_usimaster.py  test_legacy_adapter.py  test_live_amenities.py  test_mapping.py  test_mapping_dry_run.py  test_mapping_oto_live.py  test_resolve.py  test_scraper_otodom.py  test_scraper_rp.py  test_scraper_to.py  test_stage_detector.py  test_storage.py  test_transformers.py  test_unknown_bug_fix.py  verify_live.py  verify_real_urls.py
(+78 files in other folders)
