[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "usi-scrapers"
version = "0.4.7"
description = "Zewnętrzny pakiet do pobierania i unifikacji danych o inwestycjach deweloperskich (RynekPierwotny, Otodom, TabelaOfert)"
authors = [
    {name = "USI Tracker", email = "usi@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "curl_cffi>=0.7.4",
    "requests>=2.32.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "requests-mock>=1.12.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["usi_scrapers*"]
